[package]
name = "opengl_rust"
version = "0.1.0"
authors = ["tonyito <tonyitocole@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2", features = ["debug_error_checks"]}
beryllium = "0.2.0-alpha.4"

[dev-dependencies]

